syntax = "proto3";

option java_package = "domain.event.ballot.protocol";
option java_outer_classname = "ballotEventMessage";
option java_multiple_files = true;

package ballot_event_message;

service NewBallotEventService {
  rpc ValidateNewBallotEvent(NewBallotEvent)
      returns (ValidateBallotEventResponse);
}

message NewBallotEvent {
  string hash = 1;
  string option = 2;
  string topic = 3;
}

message ValidateBallotEventResponse {
  bool success = 1;
  string message = 2;
}